--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     line-height: 1.6;
 }
 html {
-    font-family: Arial, Helvetica, sans-serif;
     background: rgb(0,146,69);
     background: linear-gradient(90deg, rgba(0,146,69,1) 0%, rgba(252,238,33,1) 100%);
 }
@@ -15,7 +14,11 @@ body {
     height: 70%;
     width: 60%;
     border-radius: 10px 10px 10px 10px;
+    border-style: solid;
+    border-color: rgb(255, 255, 255);
+    border-width: 3px;
     background: rgb(147,165,207);
     background: linear-gradient(-90deg, rgba(147,165,207,1) 0%, rgba(228,239,233,1) 100%);
+    font-family: Arial, Helvetica, sans-serif;
     color: #1d4b2b;
 }
