--- a/style.css
+++ b/style.css
@@ -18,7 +18,91 @@ body {
     border-color: rgb(255, 255, 255);
     border-width: 3px;
     background: rgb(147,165,207);
-    background: linear-gradient(-90deg, rgba(147,165,207,1) 0%, rgba(228,239,233,1) 100%);
+    background: linear-gradient(-90deg, rgba(147,165,207,1) 0%, rgba(228,239,233,1) 140%);
     font-family: Arial, Helvetica, sans-serif;
-    color: #1d4b2b;
+    color: #3b3f3d;
+}
+
+h1 {
+    font-size: 24px;
+    color: white;
+}
+
+h2 {
+    font-size: 20px;
+    color: white;
+}
+
+#grid {
+    display: grid;
+    top: 100px; 
+    left: 260px;
+    height: 100%;
+    width: 100%;
+    grid-template-columns: 100%;
+    grid-template-rows: 80% 20%;
+}
+
+#gridTop {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    display: grid;
+    grid-template-columns: 2fr 4fr 0.5fr 3.5fr;
+    grid-template-rows: 100%;
+}
+
+#photo {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    margin: 10px;
+}
+
+#about {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    margin: 10px;
+}
+
+#infoL {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    margin: 10px;
+}
+
+#infoR {
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+    margin: 10px;
+}
+
+#gridBottom {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 100%;
+}
+
+#button1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    margin: auto;
+}
+
+#button2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    margin: auto;
+}
+
+#button3 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    margin: auto;
+}
+
+#button4 {
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+    margin: auto;
 }
